# starlight

./: .eslintignore  .eslintrc  .gitignore  .prettierignore  .prettierrc.cjs  CONTRIBUTIONS.md  Dockerfile  LICENSE  README.md  SECURITY.md  Sprinkles Design Document.pptx  WRITEUP.md  abi.json  apiactions  apitest.js  assign-ast-from-master.json  assign-ast.json  ast.json  circ.zok  docker-compose.yml  eslint.config.js  format_wtns.py  formatted_witness.json  index.mjs  mintAndApprove.mjs  out  out.r1cs  out.wtns  package-lock.json  package.json  pnpm-lock.yaml  privatekey  privatekey.pub  root.zok  sprinkled_ast.json  test.sh  truffle-config.js  tsconfig.json  witness  witness.json
.github/: pull-request-template.md
.github/ISSUE_TEMPLATE/: bug_fix.md  feature_request.md
.github/workflows/: main.yml  release.yml
STC/: stc.mjs
built/: index.js  solc.js
built/error/: backtrace.js  errors.js
built/parse/: redecorate.js  removeDecorators.js
circuits/: assign.zok  decr.zok  deposit.zok  incr.zok  transfer.zok  withdraw.zok
config/: default.js
contracts/: AssignShield.sol  EscrowShield.sol  Migrations.sol  ModularisedEscrowShield.sol  ModularisedEscrowShield.zol  NFTEscrowShield.sol  assign.sol  assign_desprinkled.sol  many-node-types_desprinkled.sol  mint.sol  mint.sprinkle
doc/: CONTRIBUTIONS.md  STATUS.md  WRITEUP.md  definitions.md  littleast.json  sprinkles-prelim-notes.md
examples/: Escrow_dedecorated.sol_ast.json  inferring.md  iterations.sol  scrapbook-ast.json  scrapbook.zsol
migrations/: 2_shield.js  deploy.js  metadata.js
plonkify/: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
plonkify/circom-compat/: Cargo.toml  README.md
plonkify/circom-compat/src/: lib.rs
plonkify/plonkify/: Cargo.toml
plonkify/plonkify/src/: circuit.rs  circuit_utils.rs  custom_gate.rs  lib.rs  main.rs  plonkify.rs  selectors.rs
plonkify/plonkify/src/general/: expansion.rs  linear_only.rs  mod.rs  naive_linear_only.rs  simple.rs
plonkify/plonkify/src/vanilla/: greedy_bf.rs  mod.rs  optimized.rs  simple.rs
scripts/: nft-escrow-e2e.sh
src/: desprinkler.mjs  globals.mjs  index.mjs  index.ts  parser.mjs  postProcessor.mjs  preprocessor.mjs  redecorate.mjs  redecorateOld.mjs  removeDecorators.mjs  resprinkler.mjs  solc.js  solc.mjs  solc.ts  state.mjs  tests.ts
test/: apitest.js  solc-import-path.test.js  test-zapp-actions.sh  test.js  test.mjs
(+2160 files in other folders)
