[package]
name = "circom-compat"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { version = "^0.4.0", default-features = false }
ark-std = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4.2", features = [ "derive" ] }
ark-relations = { version = "0.4.0", default-features = false}
byteorder = "1.5.0"
hex = "0.4.3"

[dev-dependencies]
ark-bn254 = { version = "0.4.0", features = [ "curve" ] }
hex-literal = "0.4.1"

[features]
default = [ "parallel" ]
parallel = [ "ark-ff/parallel", "ark-std/parallel" ]
